# operaLW

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
LICENSES/: ffmpeg.txt
docs/: PLAN.md
src/: main.ts  ui.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: commands.rs  ffmpeg.rs  main.rs  util.rs
src/lib/: ff.ts  state.ts  types.ts
