[package]
name = "opera-lw"
version = "0.1.0"
description = "Opera GX Live Wallpaper packager"
edition = "2021"
rust-version = "1.80"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "0.6" }
uuid = { version = "1", features = ["v4"] }

[features]
default = []
